# python-android-platform-tools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: test.yaml
src/python_android_platform_tools/: __init__.py  exception.py  lib.py
src/python_android_platform_tools/adb/: client.py  common.py  server.py
test/: conftest.py  test_client.py
test/adb/: test_client.py  test_common.py  test_server.py
